Fix language selector width on mobile

--- a/scss/_unhcr_new.scss
+++ b/scss/_unhcr_new.scss
@@ -179,12 +179,16 @@ h3 {
 
     #preferences {
       margin-top: 5px;
+
+      // override padding from grid because the select box for language was squished against the filters
+      padding: 0;
     }
 
     #selectedLanguage {
       min-height: 41px;
       min-width: 45px;
       padding: 3px;
+      width: auto;
     }
   }
 }
